static/assets/styles.css
@charset "UTF-8";

:root {
  /* flat UI colors */
  --flatui-cloud-color: #ecf0f1;
  --flatui-silver-color: #bdc3c7;
  --flatui-alizarin-color: #e74c3c;
  --flatui-pomegranate-color: #c0392b;
  --flatui-midnightblue-color: #2c3e50;
  --flatui-wet_asphalt-color: #34495e;
  --flatui-amethyst-color: #9b59b6;
  --flatui-wisteria-color: #8e44ad;
  --flatui-concrete-color: #95a5a6;
  --flatui-abestos-color: #7f8c8d;
  --flatui-peter_river-color: #3498db;
  --flatui-belize_hile-color: #2980b9;
}

*, *::before, *::after {
  box-sizing: border-box;
}

body {
  color: var(--flatui-wet_asphalt-color);
  background-color: white;
  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-size: 16px;
  margin: 0;
  padding: 0;
  border-top: 5px solid var(--flatui-peter_river-color);
}

@media (prefers-color-scheme: dark) {
  body {
    color: var(--flatui-cloud-color);
    background-color: black;
  }
}

.site {
  max-width: 1000px;
  margin: 2em auto;
  padding: 0 1em;
  font-size: 1.5em;
}

.metadata {
  text-align: right;
  font-style: italic;
  font-size: 0.8em;
}

.navinfos {
  text-align: center;
}

hr {
  background-color: var(--flatui-silver-color);
  height: 1px;
  border: 0 none;
}

@media (prefers-color-scheme: dark) {
  hr {
    background-color: var(--flatui-concrete-color);
  }
}

h1, h2, h3 {
  color: var(--flatui-wet_asphalt-color);
  font-weight: 300;
}

@media (prefers-color-scheme: dark) {
  h1, h2, h3 {
    color: var(--flatui-peter_river-color);
  }
}

a, a:link {
  text-decoration: none;
  color: var(--flatui-peter_river-color);
}

a:visited,
a:hover,
a:active {
  text-decoration: underline;
  color: var(--flatui-belize_hile-color);
}

a[href^="https://"]::after,
a[href^="http://"]::after {
  content: "[↗︎]";
  font-size: 0.5em;
  padding-left: .5em;
  text-decoration: none;
  color: var(--flatui-wisteria-color);
}

@media (prefers-color-scheme: dark) {
  a[href^="https://"]::after,
  a[href^="http://"]::after {
    color: var(--flatui-amethyst-color);
  }
}

p {
  line-height: 1.5em;
}

ul {
  list-style-type: circle;
}

li > p {
  margin: 0;
}

blockquote {
  color: var(--flatui-abestos-color);
  font-style: italic;
}

@media (prefers-color-scheme: dark) {
  blockquote {
    color: var(--flatui-silver-color);
  }
}

pre {
  white-space: pre-wrap;       /* Chrome & Safari */
  white-space: -moz-pre-wrap;  /* Mozilla since 1999 */
  white-space: -pre-wrap;      /* Opera 4-6 */
  white-space: -o-pre-wrap;    /* Opera 7 */
  word-wrap: break-word;       /* Internet Explorer 5.5+ */

  padding: .8em;
  line-height: 1.5em;

  color: var(--flatui-cloud-color);
  background-color: var(--flatui-cloud-color);
  border-radius: 10px;
  position: relative;
}

pre[data-langspec]::before {
  content: attr(data-langspec);
  color: var(--flatui-peter_river-color);
  text-align: right;
  text-transform: uppercase;
  letter-spacing: -.05em;
  padding: .7em;
  font-size: .7em;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 10;
}

code, pre {
  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
  font-size: 15px;
}

:not(pre) > code {
  color: var(--flatui-alizarin-color);
  padding: .05em .25em;
}

pre code {
  background: transparent;
}

img, iframe {
  max-width: 100%;
}

img[src$=".svg"] {
    margin: 0 6px -6px 0;
    width: 30px;
}

iframe {
  border: 0 none;
}

.disabled {
  color: var(--flatui-silver-color);
}

footer {
  font-size: .8em;
}

.special-links a {
  color: inherit;
  text-decoration: none;
}

.special-links a::after {
  content: none;
}

@media screen and (max-width: 1000px) {
  .special-links {
    text-align: center;
  }

  .special-links a {
    font-size: 48px;
  }
}

/*
 * IconMoon icon set
 */
@font-face {
  font-family: 'opatry';
  src: url('fonts/opatry.eot?41466537');
  src: url('fonts/opatry.eot?41466537#iefix') format('embedded-opentype'),
       url('fonts/opatry.woff2?41466537') format('woff2'),
       url('fonts/opatry.woff?41466537') format('woff'),
       url('fonts/opatry.ttf?41466537') format('truetype'),
       url('fonts/opatry.svg?41466537#opatry') format('svg');
  font-weight: normal;
  font-style: normal;
}
/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
/*
@media screen and (-webkit-min-device-pixel-ratio:0) {
  @font-face {
    font-family: 'opatry';
    src: url('fonts/opatry.svg?41466537#opatry') format('svg');
  }
}
*/
 
 [class^="icon-"]::before, [class*=" icon-"]::before {
  font-family: "opatry";
  font-style: normal;
  font-weight: normal;

  display: inline-block;
  text-decoration: inherit;
  width: 1em;
  margin-right: .2em;
  text-align: center;
  /* opacity: .8; */
 
  /* For safety - reset parent styles, that can break glyph codes*/
  font-variant: normal;
  text-transform: none;
 
  /* fix buttons height, for twitter bootstrap */
  line-height: 1em;
 
  /* Animation center compensation - margins should be symmetric */
  /* remove if not needed */
  margin-left: .2em;
 
  /* you can be more comfortable with increased icons size */
  /* font-size: 120%; */
 
  /* Font smoothing. That was taken from TWBS */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
 
  /* Uncomment for 3D effect */
  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
}
 
.icon-twitter:before { content: '\f099'; } /* '' */
.icon-github-circled:before { content: '\f09b'; } /* '' */
.icon-rss-squared:before { content: '\f143'; } /* '' */
.icon-linkedin-squared:before { content: '\f30c'; } /* '' */

